@@ -1,3 +1,7 @@
+2007-06-05  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php: Add tags when showing fragment source.
+
 2007-05-31  Abel Cheung  <abelcheung@gmail.com>
 
 	* showcode.php: Add support for cut and paste on mozilla/firefox
